Update minimum php

--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,6 @@
     "name": "dadandev/midtranspay",
     "type" : "library",
     "description": "midtrans pay plugin for web",
-    "minimum-stability" : "beta",
-    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "DadanDev\\MidtransPay\\": "src/"
@@ -15,5 +13,7 @@
             "email": "dadanhidyt@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php" : ">=8.1"
+    }
 }
