--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "dadandev/midtranspay",
     "type" : "library",
     "description": "midtrans pay plugin for web",
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "DadanDev\\MidtransPay\\": "src/"
